--- a/index.html
+++ b/index.html
@@ -14,9 +14,22 @@
         <a href=""><img src="assets/images/logo.png" alt="Logo"></a>
       </div>
       <div class="menu">
-        ...
+        <nav>
+          <ul>
+            <li><a class="active" href="">HOME</a></li>
+            <li><a href="">BLOG</a></li>
+            <li><a href="">PAGES</a></li>
+            <li><a href="">COMPARTMENTS</a></li>
+            <li><a href="">TIMETABLE</a></li>
+            <li><a href="">GALLERY</a></li>
+            <li><a href="">CONTACT</a></li>
+          </ul>
+        </nav>
       </div>
   </header>
+  <section id="banner">
+
+  </section>
   <img src="" alt="">
   </body>
 </html>
