--- a/index.html
+++ b/index.html
@@ -28,8 +28,60 @@
       </div>
   </header>
   <section id="banner">
-
+    <div class="container column">
+      <div class="banner_headline">
+        <h1>Top notch experience</h1>
+        <h2>Medicenter is a responsive template perfect for all screen sizes</h2>
+      </div>
+      <div class="banner_options">
+        <div class="banner1">
+          <div class="banner_title">Emergency Case</div>
+          <div class="banner_desc">If you need a doctor urgently outside of medicente opening hours, call emergency appointment number for emergency service</div>
+          <a href="">Read more -></a>
+        </div>
+        <div class="banner2">
+          <div class="banner_title">Doctors Timetable</div>
+          <div class="banner_desc">Here at medicenter we have individual doctor's lists. Click read more below to see services and current timetable for our doctors.</div>
+          <a href="">Read more -></a>
+        </div>
+        <div class="banner3">
+          <div class="banner_title">Opening Hours</div>
+          <div class="opening">
+            <div class="hour_first">
+              <div>
+                Monday - Friday
+              </div>
+              <div>
+                8.00 - 17.00
+              </div>
+            </div>
+            <div class="hour_second">
+              <div>
+                Saturday
+              </div>
+              <div>
+                9.30 - 17.30
+              </div>
+            </div>
+            <div  class="hour_third">
+              <div>
+                Sunday
+              </div>
+              <div>
+                9.30 - 15.00
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
   </section>
-  <img src="" alt="">
+
+
+
+
+
+
+
   </body>
 </html>
