Implementando Deparments/Appointment

--- a/index.html
+++ b/index.html
@@ -76,7 +76,62 @@
       </div>
   </div>
   </section>
-
+  <section id="section_main">
+    <div class="container">
+      <section>
+        <div class="widget">
+          <div class="widget_title">
+            <div class="widget_title_text">Latest News</div>
+            <div class="widget_bar"></div>
+          </div>
+          <div class="widget_body">
+            ;;;
+          </div>
+        </div>
+      </section>
+      <aside>
+        <div class="widget">
+          <div class="widget_title">
+            <div class="widget_title_text">Deparments</div>
+            <div class="widget_bar"></div>
+          </div>
+          <div class="widget_body">
+            <div class="widget_body_deparments">
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+          </div>
+        </div>
+        <div class="widget">
+          <div class="widget_title">
+            <div class="widget_title_text">Make An Appointment</div>
+            <div class="widget_bar"></div>
+          </div>
+          <div class="widget_body">
+            <div class="widget_body_appointment">
+              <div id="app_msg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor </div>
+              <div class="end">
+                <div><img class="icon" src="assets/icons/telephone.png" alt="" srcset=""></div>
+                <div>by phone: <strong>1-4000-642-4200</strong></div>
+              </div>
+              <div class="end">
+                <div><img class="icon" src="assets/icons/o-email.png" alt="" srcset=""></div>
+                <div>by e-mail: <a href=mailto:medicenter@mail.com>medicenter@mail.com</a></div>
+              </div>
+              <div class="end">
+                <div><img class="icon" src="assets/icons/address.png" alt="" srcset=""></div>
+                <div>or 2702 Memory Lane, Chicago,60605</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </aside>
+    </div>
+  </section>
 
 
 
