Finalizando as noticias

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Medicenter</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Medicenter</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+
+<body>
   <header>
     <div class="container">
       <div class="logo">
@@ -36,12 +38,14 @@
       <div class="banner_options">
         <div class="banner1">
           <div class="banner_title">Emergency Case</div>
-          <div class="banner_desc">If you need a doctor urgently outside of medicente opening hours, call emergency appointment number for emergency service</div>
+          <div class="banner_desc">If you need a doctor urgently outside of medicente opening hours, call emergency
+            appointment number for emergency service</div>
           <a href="">Read more -></a>
         </div>
         <div class="banner2">
           <div class="banner_title">Doctors Timetable</div>
-          <div class="banner_desc">Here at medicenter we have individual doctor's lists. Click read more below to see services and current timetable for our doctors.</div>
+          <div class="banner_desc">Here at medicenter we have individual doctor's lists. Click read more below to see
+            services and current timetable for our doctors.</div>
           <a href="">Read more -></a>
         </div>
         <div class="banner3">
@@ -63,7 +67,7 @@
                 9.30 - 17.32
               </div>
             </div>
-            <div  class="hour_third">
+            <div class="hour_third">
               <div>
                 Sunday
               </div>
@@ -74,7 +78,7 @@
           </div>
         </div>
       </div>
-  </div>
+    </div>
   </section>
   <section id="section_main">
     <div class="container">
@@ -84,8 +88,92 @@
             <div class="widget_title_text">Latest News</div>
             <div class="widget_bar"></div>
           </div>
-          <div class="widget_body">
-            ;;;
+          <div class="widget_body flex">
+            <article>
+              <a href="">
+                <div class="news_data">
+                  <div class="news_posted_at">12 DEC 12</div>
+                  <div class="news_comments"> 2</div>
+                </div>
+                <div class="news_thumbnail">
+                  <img src="assets/images/dr.jpg" alt="" srcset="">
+                </div>
+                <div class="news_title">
+                  Loren ipsum dolor sit amat velum
+                </div>
+                <div class="news_resume">
+                  It is a long established fact that a reader will be distracted
+                  by the readable content of a page when looking at its layout.
+                  The point of using Lorem Ipsum is that it has a more-or-less
+                  normal distribution of letters, as opposed to using 'Content
+                  here, content here', making it look like readable English
+                  
+                </div>
+              </a>
+            </article>
+            <article>
+              <a href="">
+                <div class="news_data">
+                  <div class="news_posted_at">12 DEC 12</div>
+                  <div class="news_comments"> 2</div>
+                </div>
+                <div class="news_thumbnail">
+                  <img src="assets/images/dr.jpg" alt="" srcset="">
+                </div>
+                <div class="news_title">
+                  Loren ipsum dolor sit amat velum
+                </div>
+                <div class="news_resume">
+                  It is a long established fact that a reader will be distracted
+                  by the readable content of a page when looking at its layout.
+                  The point of using Lorem Ipsum is that it has a more-or-less
+                  normal distribution of letters, as opposed to using 'Content
+                  here, content here', making it look like readable English
+                </div>
+              </a>
+            </article>
+            <article>
+              <a href="">
+                <div class="news_data">
+                  <div class="news_posted_at">12 DEC 12</div>
+                  <div class="news_comments"> 2</div>
+                </div>
+                <div class="news_thumbnail">
+                  <img src="assets/images/dr.jpg" alt="" srcset="">
+                </div>
+                <div class="news_title">
+                  Loren ipsum dolor sit amat velum
+                </div>
+                <div class="news_resume">
+                  It is a long established fact that a reader will be distracted
+                  by the readable content of a page when looking at its layout.
+                  The point of using Lorem Ipsum is that it has a more-or-less
+                  normal distribution of letters, as opposed to using 'Content
+                  here, content here', making it look like readable English
+                </div>
+              </a>
+            </article>
+            <article>
+              <a href="">
+                <div class="news_data">
+                  <div class="news_posted_at">12 DEC 12</div>
+                  <div class="news_comments"> 2</div>
+                </div>
+                <div class="news_thumbnail">
+                  <img src="assets/images/dr.jpg" alt="" srcset="">
+                </div>
+                <div class="news_title">
+                  Loren ipsum dolor sit amat velum
+                </div>
+                <div class="news_resume">
+                  It is a long established fact that a reader will be distracted
+                  by the readable content of a page when looking at its layout.
+                  The point of using Lorem Ipsum is that it has a more-or-less
+                  normal distribution of letters, as opposed to using 'Content
+                  here, content here', making it look like readable English
+                </div>
+              </a>
+            </article>
           </div>
         </div>
       </section>
@@ -138,5 +226,6 @@
 
 
 
-  </body>
+</body>
+
 </html>
