Implementação do footer

--- a/index.html
+++ b/index.html
@@ -107,7 +107,6 @@
                   The point of using Lorem Ipsum is that it has a more-or-less
                   normal distribution of letters, as opposed to using 'Content
                   here, content here', making it look like readable English
-                  
                 </div>
               </a>
             </article>
@@ -220,6 +219,156 @@
       </aside>
     </div>
   </section>
+  <footer>
+    <div class="container ft_column">
+      <div class="footer_menu">
+        <div class="fm_1">
+          <a href="">
+            <div class="ft_title">
+              Health Insurance
+            </div>
+            <div class="ft_desc">
+              Here in medicenter we have individual ->
+            </div>
+          </a>
+        </div>
+        <div class="fm_2">
+          <a href="">
+            <div class="ft_title">
+              Medical Records
+            </div>
+            <div class="ft_desc">
+              Here in medicenter we have individual ->
+            </div>
+          </a>
+        </div>
+        <div class="fm_3">
+          <a href="">
+            <div class="ft_title">
+              Online Bil Pay
+            </div>
+            <div class="ft_desc">
+              Here in medicenter we have individual ->
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="footer_area">
+        <div class="footer_areaitem">
+          <div class="widget">
+            <div class="widget_title">
+              <div class="widget_title_text">Medicenter Clinic</div>
+              <div class="widget_bar"></div>
+            </div>
+            <div class="widget_body">
+              <div class="wb1">
+                Mauris adipiscing mauris fringilla turpis interdum
+                sed pulvinar nisi malesuada individual
+              </div>
+              <div class="wb2">
+                <div id="end">
+                  Medicenter Clinic
+                  33 Farlane Street
+                  Keilor East </br>
+                  VIC 3033, Australia
+                </div>
+                <div id="contacts">
+                  +123 655 655</br>
+                  +123 755 755</br>
+                  <a href="">medicenter@mail.com</a>
+                </div>
+              </div>
+              <div class="wb3">
+                icons
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer_areaitem">
+          <div class="widget">
+            <div class="widget_title">
+              <div class="widget_title_text">Latest Posts</div>
+              <div class="widget_bar"></div>
+            </div>
+            <div class="widget_body">
+              <a href="">
+                <div>
+                  Mauris adipiscing mauris fringilla turpis interdum
+                  sed pulvinar nisi malesuada.
+                </div>
+                <div class="six">
+                  <b>6 years ago</b>
+                </div>
+              </a>
+              <a href="">
+                <div>
+                  Lorem ipsum dolor sit amat velum
+                </div>
+                <div class="six">
+                  <b>6 years ago</b>
+                </div>
+              </a>
+              <a href="">
+                <div>
+                  Mauris adipiscing mauris fringilla turpis interdum
+                  sed pulvinar nisi malesuada.
+                </div>
+                <div class="six">
+                  <b>6 years ago</b>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="footer_areaitem">
+          <div class="widget">
+            <div class="widget_title">
+              <div class="widget_title_text">Latest Tweets</div>
+              <div class="widget_bar"></div>
+            </div>
+            <div class="widget_body">
+              <div class="mr1">
+                We've released new version (v13.6) of our MediCenter #Health #Medical
+                #Clinic #WordPress Theme. Please check at…<a href="">t.co/lHg4cCLLVt</a>
+              </div>
+              <div class="six">
+                <b>4 days ago</b>
+              </div>
+              <div class="mr2">
+                We've released new version (v14.6) of our GymBase #Gym #Fitness #WordPress
+                Theme. Please check at #ThemeForest
+                <a href="">t.co/8mEwDr0hie</a>
+              </div>
+              <div class="six">
+                <b>6 days ago</b>
+              </div>
+              <div class="mr3">
+                We've released new version (v7.3) of our Renovate #Construction #Renovation
+                #WordPress Theme. Check at #ThemeForest 
+                <a href="">t.co/Qq0xOm69tZ</a>
+              </div>
+              <div class="six">
+                <b>7 days ago</b>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer_copy">
+        &copy; Copyright - Todos os direitos reservados
+      </div>
+    </div>
+  </footer>
+
+
+
+
+
+
+
+
+
+
 
 
 
