ajustes de revisao

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,user-scalable=0">
   <title>Medicenter</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -50,7 +50,7 @@
         </div>
         <div class="banner3">
           <div class="banner_title">Opening Hours</div>
-          <div class="opening">
+          <div class="banner_desc">
             <div class="hour_first">
               <div>
                 Monday - Friday
@@ -80,7 +80,7 @@
       </div>
     </div>
   </section>
-  <section id="section_main">
+  <section id="geral">
     <div class="container">
       <section>
         <div class="widget">
@@ -182,15 +182,13 @@
             <div class="widget_title_text">Deparments</div>
             <div class="widget_bar"></div>
           </div>
-          <div class="widget_body">
-            <div class="widget_body_deparments">
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-            </div>
+          <div class="widget_body_deparments">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
           </div>
         </div>
         <div class="widget">
@@ -198,21 +196,19 @@
             <div class="widget_title_text">Make An Appointment</div>
             <div class="widget_bar"></div>
           </div>
-          <div class="widget_body">
-            <div class="widget_body_appointment">
-              <div id="app_msg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor </div>
-              <div class="end">
-                <div><img class="icon" src="assets/icons/telephone.png" alt="" srcset=""></div>
-                <div>by phone: <strong>1-4000-642-4200</strong></div>
-              </div>
-              <div class="end">
-                <div><img class="icon" src="assets/icons/o-email.png" alt="" srcset=""></div>
-                <div>by e-mail: <a href=mailto:medicenter@mail.com>medicenter@mail.com</a></div>
-              </div>
-              <div class="end">
-                <div><img class="icon" src="assets/icons/address.png" alt="" srcset=""></div>
-                <div>or 2702 Memory Lane, Chicago,60605</div>
-              </div>
+          <div class="widget_body_appointment">
+            <div id="app_msg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor </div>
+            <div class="end">
+              <div><img class="icon" src="assets/icons/telephone.png" alt="" srcset=""></div>
+              <div>by phone: <strong>1-4000-642-4200</strong></div>
+            </div>
+            <div class="end">
+              <div><img class="icon" src="assets/icons/o-email.png" alt="" srcset=""></div>
+              <div>by e-mail: <a href=mailto:medicenter@mail.com>medicenter@mail.com</a></div>
+            </div>
+            <div class="end">
+              <div><img class="icon" src="assets/icons/address.png" alt="" srcset=""></div>
+              <div>or 2702 Memory Lane, Chicago,60605</div>
             </div>
           </div>
         </div>
@@ -344,7 +340,7 @@
               </div>
               <div class="mr3">
                 We've released new version (v7.3) of our Renovate #Construction #Renovation
-                #WordPress Theme. Check at #ThemeForest 
+                #WordPress Theme. Check at #ThemeForest
                 <a href="">t.co/Qq0xOm69tZ</a>
               </div>
               <div class="six">
