--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       </div>
       <div class="menu">
         <nav>
+          <div class="menuMobile">
+            <div class="mm_line"></div>
+            <div class="mm_line"></div>
+            <div class="mm_line"></div>
+          </div>
           <ul>
             <li><a class="active" href="">HOME</a></li>
             <li><a href="">BLOG</a></li>
@@ -82,10 +87,10 @@
   </section>
   <section id="geral">
     <div class="container">
-      <section>
+      <section id="ds">
         <div class="widget">
           <div class="widget_title">
-            <div class="widget_title_text">Latest News</div>
+            <div id="down" class="widget_title_text">Latest News</div>
             <div class="widget_bar"></div>
           </div>
           <div class="widget_body flex">
@@ -370,7 +375,7 @@
 
 
 
-
+  <script src="assets/js/script.js"></script>
 </body>
 
 </html>
