--- a/index.html
+++ b/index.html
@@ -280,7 +280,10 @@
                 </div>
               </div>
               <div class="wb3">
-                icons
+                <a href=""><img class="icon" src="assets/icons/inst.png" alt="Logo"></a>
+                <a href=""><img class="icon" src="assets/icons/carta.png" alt="Logo"></a>
+                <a href=""><img class="icon" src="assets/icons/tw.png" alt="Logo"></a>
+                <a href=""><img class="icon"src="assets/icons/cal.png" alt="Logo"></a>
               </div>
             </div>
           </div>
